# trivy-image-slack-reporter

./: .gitignore  CODEOWNERS  Justfile  LICENCE  LICENSE  NOTICE  README.md  main.py  pyproject.toml  report.json
.github/: dependabot.yaml
tests/: test_reporter.py
tests/__snapshots__/: test_reporter.ambr
tests/fixtures/: python-3.9-report.json  ruby-3.4.6-report.json
trivy-image-slack-reporter/: trivy-image-slack-reporter.py
trivy_image_slack_reporter/: __main__.py  blocks.py  trivy_image_slack_reporter.py
