[project]
name = "trivy-image-slack-reporter"
version = "1.0.0"
description = "Send a message to Slack with the contents of a Trivy image scan."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk>=3.36.0",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "trivy_image_slack_reporter"
module-root = ""