[project]
name = "trivy-image-slack-reporter"
version = "2.1.0"
description = "Send a message to Slack with the contents of a Trivy image scan."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-sdk>=3.36.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "syrupy>=5.0.0",
    "ty>=0.0.1a25",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "trivy_image_slack_reporter"
module-root = "."

[tool.ruff]
target-version = 'py313'
line-length = 95
indent-width = 4

[tool.ruff.lint]
select = [
    "RUF", # Ruff specific rules
    "N",   # pep8-naming
    "I",   # isort
    "F",   # pyflakes
    "UP",  # pyupgrade
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "ANN", # flake8-annotations
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
]

ignore = [
    "E501", # line-too-long
    "T201", # print
]

[tool.ruff.lint.isort]
combine-as-imports = true
